--- a/index.html
+++ b/index.html
@@ -1,23 +1,96 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp" ng-controller="MainCtrl" class="h-100">
+<html lang="en" ng-app="myApp" ng-controller="MainCtrl">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <link href="scss/theme.css" type="text/css" rel="Stylesheet" />
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/png" />
-    <title>ACNH</title>
+    <link rel="shortcut icon" href="./img/nookleaf.png" type="image/png" />
+    <title>Critterpedia Lookup</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
     <script src="./js/app.js"></script>
-    <script src="./js/contactscript.js"></script>
   </head>
-  <body ng-cloak>
-    <div class="p-5">
-      <div>Test Page...</div>
+  <body ng-cloak ng-init="getFishData()">
+    <div class="container">
+      <div class="text-center py-4">
+        <div class="h5">Animal Crossing: New Horizons</div>
+        <div class="h3">Critterpedia Cheat Sheet</div>
+      </div>
+
+      <div class="form-row py-4">
+        <div class="col-12 col-md-6 mb-2">
+          <input type="search" class="form-control" ng-model="searchtext" placeholder="Find a Critter..." />
+        </div>
+        <!-- <div class="col-12 col-md-6 mb-2">
+          <select name="crittertype" id="crittertype" ng-model="crittertype" class="form-control">
+            <option value="fish">Fish</option>
+            <option value="bugs">Bugs</option>
+            <option value="seacreatures">Sea Creatures</option>
+          </select>
+        </div> -->
+      </div>
+
+      <div>
+        <table class="table table-hover table-striped">
+          <thead>
+            <tr>
+              <th>
+                <a href="#" ng-click="orderByField='displayname'; reverseSort = !reverseSort">
+                  Name
+                  <span ng-show="orderByField == 'displayname'">
+                    <span ng-show="!reverseSort"><i class="fas fa-sort-up"></i></span>
+                    <span ng-show="reverseSort"><i class="fas fa-sort-down"></i></span>
+                  </span>
+                </a>
+              </th>
+              <th>
+                <a href="#" ng-click="orderByField='price'; reverseSort = !reverseSort">
+                  Price
+                  <span ng-show="orderByField == 'price'">
+                    <span ng-show="!reverseSort"><i class="fas fa-sort-up"></i></span>
+                    <span ng-show="reverseSort"><i class="fas fa-sort-down"></i></span>
+                  </span>
+                </a>
+              </th>
+              <th>
+                <a href="#" ng-click="orderByField='shadow'; reverseSort = !reverseSort">
+                  Shadow
+                  <span ng-show="orderByField == 'shadow'">
+                    <span ng-show="!reverseSort"><i class="fas fa-sort-up"></i></span>
+                    <span ng-show="reverseSort"><i class="fas fa-sort-down"></i></span>
+                  </span>
+                </a>
+              </th>
+              <th>Availability</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="critter in acnhdata | orderBy:orderByField:reverseSort | filter:searchtext">
+              <td class="align-middle">
+                <div class="d-flex justify-content-start align-items-center">
+                  <img ng-src="{{critter.icon_uri}}" class="img-fluid" style="height: 40px;" alt="" />
+                  <div class="ml-2">
+                    <div class="text-capitalize">{{ critter.displayname }}</div>
+                    <div class="small">{{ critter.availability.rarity }}</div>
+                    <!-- <div class="small">{{ critter['catch-phrase'] }}</div> -->
+                  </div>
+                </div>
+              </td>
+              <td class="align-middle">{{ critter.price | currency:'':0 }}</td>
+              <td class="align-middle text-nowrap">{{ critter.shadow }}</td>
+              <td class="align-middle">
+                <div>{{ critter.availability.location }}</div>
+                <div class="small" ng-if="critter.availability.time">{{ critter.availability.time }}</div>
+                <div class="small" ng-if="!critter.availability.time">Any time</div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </body>
 </html>
