Switched toArrayFilter from local to CDN

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
-    <script src="./node_modules/angular-toarrayfilter/toArrayFilter.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-toarrayfilter/1.0.3/toArrayFilter.min.js" integrity="sha512-NQtYf59i2deooceVdYJ5b5RJnSWJMAbM+NhTXNOzU2WgwZtf1X0+r7VaLGLkM1ijKC0lvdYjIG+LN8+Wbzr9sA==" crossorigin="anonymous"></script>
     <script src="./js/app.js"></script>
   </head>
   <body ng-cloak ng-init="init()">
