--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./scss/theme.css" type="text/css" rel="Stylesheet" />
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <link rel="shortcut icon" href="./img/nookleaf.png" type="image/png" />
-    <title>Critterpedia Lookup</title>
+    <title>Critterpedia Prices</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -16,31 +16,30 @@
     <script src="./js/app.js"></script>
   </head>
   <body ng-cloak ng-init="init()">
-    <!-- <div class="small">
-      <textarea ng-bind="critters|json" name="" id="" cols="30" rows="10"></textarea>
-    </div> -->
-
     <div class="container">
-      <div class="text-center py-4">
+      <div class="text-center pt-4">
         <div class="h6">Animal Crossing: New Horizons</div>
-        <div class="h4">Critterpedia Price Sheet</div>
+        <div class="h2">Critterpedia Prices</div>
       </div>
 
-      <div class="form-row py-4">
-        <div class="col-12 col-md-6 mb-2">
-          <input type="search" class="form-control" ng-model="searchtext" placeholder="Find a Critter..." />
-        </div>
-        <div class="col-12 col-md-6 mb-2">
+      <div class="row py-4">
+        <div class="col-12 col-md-6 mb-4">
           <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
             <label class="btn btn-outline-primary" ng-class="{'active':crittertype=='fish'}"> <input type="radio" name="crittertype" id="crittertype_fish" ng-model="crittertype" ng-change="getCritterData()" value="fish" /> Fish </label>
             <label class="btn btn-outline-primary" ng-class="{'active':crittertype=='bug'}"> <input type="radio" name="crittertype" id="crittertype_bug" ng-model="crittertype" ng-change="getCritterData()" value="bug" /> Bugs </label>
             <label class="btn btn-outline-primary" ng-class="{'active':crittertype=='sea'}"> <input type="radio" name="crittertype" id="crittertype_sea" ng-model="crittertype" ng-change="getCritterData()" value="sea" /> Sea </label>
+            <label class="btn btn-outline-primary" ng-class="{'active':crittertype=='all'}"> <input type="radio" name="crittertype" id="crittertype_all" ng-model="crittertype" ng-change="getCritterData()" value="" /> All </label>
           </div>
-          <!-- <select name="crittertype" id="crittertype" ng-model="crittertype" class="form-control" ng-change="getCritterData()">
-            <option value="fish">Fish</option>
-            <option value="bugs">Bugs</option>
-            <option value="sea">Sea Creatures</option>
-          </select> -->
+        </div>
+        <div class="col-12 col-md-6 mb-2">
+          <div class="input-group">
+            <input type="search" class="form-control" ng-model="searchtext" placeholder="Critter lookup..." aria-describedby="lookupbtns" />
+            <div class="input-group-append btn-group btn-group-toggle" id="lookupbtns" data-toggle="buttons">
+              <label class="btn btn-outline-primary" ng-class="{'active':lookuptype=='highlight'}"> <input type="radio" name="lookuptype" id="lookuptype_highlight" ng-model="lookuptype" value="highlight" /> Highlight </label>
+              <label class="btn btn-outline-primary" ng-class="{'active':lookuptype=='filter'}"> <input type="radio" name="lookuptype" id="lookuptype_filter" ng-model="lookuptype" value="filter" /> Filter </label>
+            </div>
+          </div>
+          <div class="small pt-2 text-center">Filtering results will hide everything except what matches your search. Highlight will keep everything visible but highlight the rows that match your search.</div>
         </div>
       </div>
 
@@ -48,13 +47,12 @@
         <table class="table table-hover table-sm">
           <thead>
             <tr>
-              <th></th>
               <th>
                 <a href="#" ng-click="orderByField='displayname'; reverseSort = !reverseSort" class="text-nowrap">
                   Critter
                   <span ng-show="orderByField == 'displayname'">
-                    <span ng-show="!reverseSort"><i class="fas fa-sort-up"></i></span>
-                    <span ng-show="reverseSort"><i class="fas fa-sort-down"></i></span>
+                    <span ng-show="!reverseSort"><i class="fas fa-caret-down fa-lg"></i></span>
+                    <span ng-show="reverseSort"><i class="fas fa-caret-up fa-lg"></i></span>
                   </span>
                 </a>
               </th>
@@ -62,8 +60,8 @@
                 <a href="#" ng-click="orderByField='price'; reverseSort = !reverseSort" class="text-nowrap">
                   Price
                   <span ng-show="orderByField == 'price'">
-                    <span ng-show="!reverseSort"><i class="fas fa-sort-up"></i></span>
-                    <span ng-show="reverseSort"><i class="fas fa-sort-down"></i></span>
+                    <span ng-show="!reverseSort"><i class="fas fa-caret-up fa-lg"></i></span>
+                    <span ng-show="reverseSort"><i class="fas fa-caret-down fa-lg"></i></span>
                   </span>
                 </a>
               </th>
@@ -73,11 +71,11 @@
             <tr ng-if="!crittersloaded">
               <td colspan="4" class="p-4 text-center font-weight-light"><i class="fas fa-spinner fa-pulse"></i> Getting Critter data...</td>
             </tr>
-            <tr ng-if="crittersloaded" ng-repeat="(key, value) in critters | toArray | orderBy:orderByField:reverseSort | filter:{ displayname: searchtext } | filter:{ type: crittertype }">
-              <td class="align-middle">
+            <tr ng-class="{'bg-secondary' : value.highlight, 'font-weight-bold' : value.highlight}" ng-if="crittersloaded" ng-repeat="(key, value) in critters | toArray | orderBy:orderByField:reverseSort | search:lookuptype:searchtext | filter:{ type: crittertype }">
+              <td class="align-middle text-capitalize">
                 <img ng-src="{{value.icon_uri}}" class="img-fluid" style="height: 40px;" alt="" />
+                <span class="ml-2">{{ value.displayname }}</span>
               </td>
-              <td class="align-middle text-capitalize">{{ value.displayname }}</td>
               <td class="align-middle">{{ value.price | currency:'':0 }}</td>
             </tr>
           </tbody>
