--- a/detail.html
+++ b/detail.html
@@ -53,7 +53,7 @@
             >
           </select>
         </div>
-        <div class="col-12 col-lg-4 mb-4">
+        <div class="col-12 col-sm-6 col-lg-4 mb-4">
           <div class="font-weight-bold">
             Critter Lookup
             <a href="#" data-toggle="modal" data-target="#modalLookupHelp" class="ml-2">What's this?</a>
@@ -65,7 +65,6 @@
               <label class="btn btn-outline-primary" ng-class="{'active':lookuptype=='filter'}"> <input type="radio" name="lookuptype" id="lookuptype_filter" ng-model="lookuptype" value="filter" /> Filter </label>
             </div>
           </div>
-          <div class="small pt-2 text-center">Filter hides everything except matches. Highlight keeps everything visible but highlights rows that match.</div>
         </div>
       </div>
 
@@ -118,7 +117,11 @@
             <tr ng-if="!crittersloaded">
               <td colspan="4" class="p-4 text-center font-weight-light"><i class="fas fa-spinner fa-pulse"></i> Getting Critter data...</td>
             </tr>
-            <tr ng-class="{'bg-secondary' : value.highlight, 'font-weight-bold' : value.highlight}" ng-if="crittersloaded" ng-repeat="(key, value) in critters | toArray | orderBy:orderByField:reverseSort | search:lookuptype:searchtext | filter:{ type: crittertype } | bymonth:availmonth:hemisphere">
+            <tr
+              ng-class="{'bg-secondary' : value.highlight, 'font-weight-bold' : value.highlight}"
+              ng-if="crittersloaded"
+              ng-repeat="(key, value) in results = (critters | toArray | orderBy:orderByField:reverseSort | search:lookuptype:searchtext | filter:{ type: crittertype } | bymonth:availmonth:hemisphere)"
+            >
               <td class="align-middle text-capitalize text-nowrap">
                 <img ng-src="{{value.icon_uri}}" class="img-fluid" style="height: 30px;" alt="" />
                 <span class="ml-2">{{ value.displayname }}</span>
@@ -161,6 +164,15 @@
                 <div ng-if="value.availability.rarity">{{ value.availability.rarity }}</div>
                 <div ng-if="!value.availability.rarity" class="text-muted small">n/a</div>
               </td> -->
+            </tr>
+            <tr ng-if="results.length > 0">
+              <td colspan="6" class="text-center">{{results.length}} Critters found</td>
+            </tr>
+            <tr ng-if="results.length == 0">
+              <td colspan="6" class="text-center p-3">
+                <div class="text-danger h5 font-weight-bold"><i class="far fa-frown mr-1"></i> No Critters found</div>
+                <div>There aren't any Critters that match your filters &amp; search.</div>
+              </td>
             </tr>
           </tbody>
         </table>
