Banner path changed to direct

--- a/detail.html
+++ b/detail.html
@@ -19,7 +19,7 @@
   <body ng-cloak ng-init="initDetails()">
     <div ng-include="'./_modal-lookup-help.html'"></div>
 
-    <div ng-include="'./_banner.html'"></div>
+    <div ng-include="'_banner.html'"></div>
 
     <div class="h1 py-4 text-center">Critterpedia</div>
 
