Removed underscore character from filenames to avoid issues

--- a/detail.html
+++ b/detail.html
@@ -17,9 +17,9 @@
     <script></script>
   </head>
   <body ng-cloak ng-init="initDetails()">
-    <div ng-include="'./_modal-lookup-help.html'"></div>
+    <div ng-include="'./modal-lookup-help.html'"></div>
 
-    <div ng-include="'_banner.html'"></div>
+    <div ng-include="'./banner.html'"></div>
 
     <div class="h1 py-4 text-center">Critterpedia</div>
 
