--- a/villagers.html
+++ b/villagers.html
@@ -17,7 +17,7 @@
     <script></script>
   </head>
   <body ng-cloak ng-init="initVillagers()">
-    <div ng-include="'_banner.html'"></div>
+    <div ng-include="'./banner.html'"></div>
 
     <div class="h1 py-4 text-center">Villagers</div>
 
