Added index page and renamed details to critters

--- a/critters.html
+++ b/critters.html
@@ -21,9 +21,8 @@
 
     <div ng-include="'./banner.html'"></div>
 
-    <div class="h1 py-4 text-center">Critterpedia</div>
-
-    <div class="container">
+    <div class="container pt-5">
+      <div class="h1 py-4 text-center">Critters</div>
       <div class="row">
         <div class="col-12 col-sm-6 col-lg-3 mb-4">
           <div class="font-weight-bold">Critter Type</div>
