--- a/banner.html
+++ b/banner.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
   <a class="navbar-brand" href="./index.html">
-    <!-- <img src="./img/nookleaf.svg" alt="" style="height: 20px;" /> -->
-    <span class="font-weight-bold px-1">ACNH:</span>
-    <span class="">Helpful Things</span>
+    <img src="./img/nookleafwhite.svg" alt="" style="height: 20px;" />
+    <span class="font-weight-bold px-1">AC:NH</span>
+    <span class="">TOOLS</span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="./detail.html">Critters</a>
+        <a class="nav-link" href="./critters.html">Critters</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="./villagers.html">Villagers</a>
