--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./scss/theme.css" type="text/css" rel="Stylesheet" />
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <link rel="shortcut icon" href="./img/nookleaf.png" type="image/png" />
-    <title>Critterpedia Prices</title>
+    <title>ACNH Tools</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -16,138 +16,43 @@
     <script src="./js/app.js"></script>
     <script></script>
   </head>
-  <body ng-cloak ng-init="init()">
-    <!-- <div class="modal fade" id="modalDetails" tabindex="-1" aria-labelledby="modalDetailsLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="modalDetailsLabel">{{ detailmodalcontent.displayname }}</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div>
-              <div>{{ detailmodalcontent.price }}</div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Send message</button>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-    <div class="container">
-      <div class="text-center pt-4">
-        <div class="h6">Animal Crossing: New Horizons</div>
-        <div class="h2">Critterpedia Prices</div>
+  <body ng-cloak>
+    <div ng-include="'./banner.html'"></div>
+    <div class="container pt-5">
+      <div class="py-4">
+        <div class="h1 text-center">Welcome!</div>
+        <!-- <div class="text-center">I hope you find these tools useful. More will be added soon, so please check back often.</div> -->
       </div>
 
-      <div class="row py-4">
-        <div class="col-12 col-md-6 col-lg-5 mb-4">
-          <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
-            <label class="btn btn-outline-primary" ng-class="{'active':crittertype=='fish'}"> <input type="radio" name="crittertype" id="crittertype_fish" ng-model="crittertype" ng-change="getCritterData()" value="fish" /> Fish </label>
-            <label class="btn btn-outline-primary" ng-class="{'active':crittertype=='bug'}"> <input type="radio" name="crittertype" id="crittertype_bug" ng-model="crittertype" ng-change="getCritterData()" value="bug" /> Bugs </label>
-            <label class="btn btn-outline-primary" ng-class="{'active':crittertype=='sea'}"> <input type="radio" name="crittertype" id="crittertype_sea" ng-model="crittertype" ng-change="getCritterData()" value="sea" /> Sea </label>
-            <label class="btn btn-outline-primary" ng-class="{'active':crittertype=='all'}"> <input type="radio" name="crittertype" id="crittertype_all" ng-model="crittertype" ng-change="getCritterData()" value="" /> All </label>
-          </div>
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-4 offset-md-2 col-lg-3 offset-lg-3 col-xl-2 offset-xl-4 mb-3">
+          <a href="./critters.html" class="btn btn-primary btn-block btn-lg">Critters</a>
         </div>
-        <div class="col-12 col-md-6 col-lg-6 offset-lg-1 mb-2">
-          <div class="input-group">
-            <input type="search" class="form-control" ng-model="searchtext" placeholder="Critter lookup..." aria-describedby="lookupbtns" />
-            <div class="input-group-append btn-group btn-group-toggle" id="lookupbtns" data-toggle="buttons">
-              <label class="btn btn-outline-primary" ng-class="{'active':lookuptype=='highlight'}"> <input type="radio" name="lookuptype" id="lookuptype_highlight" ng-model="lookuptype" value="highlight" /> Highlight </label>
-              <label class="btn btn-outline-primary" ng-class="{'active':lookuptype=='filter'}"> <input type="radio" name="lookuptype" id="lookuptype_filter" ng-model="lookuptype" value="filter" /> Filter </label>
-            </div>
-          </div>
-          <div class="small pt-2 text-center">Filtering results will hide everything except what matches your search. Highlight will keep everything visible but highlight the rows that match your search.</div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-3">
+          <a href="./villagers.html" class="btn btn-primary btn-block btn-lg">Villagers</a>
         </div>
-      </div>
-
-      <div>
-        <div class="d-none" ng-class="{'bg-secondary' : value.highlight, 'font-weight-bold' : value.highlight}" ng-if="crittersloaded" ng-repeat="(key, value) in critters | toArray | orderBy:orderByField:reverseSort | search:lookuptype:searchtext | filter:{ type: crittertype }">
-          <div class="d-flex justify-content-between align-items-center border-top py-1">
-            <div>
-              <!-- <a href="#" class="btn btn-link" data-toggle="collapse" data-target="#{{ value['file-name'] }}" aria-expanded="false"><i class="fas fa-plus expanded-indicator"></i></a> -->
-              <img ng-src="{{value.icon_uri}}" class="img-fluid" style="height: 35px;" alt="" />
-              <span class="text-capitalize ml-2">{{ value.displayname }}</span>
+        <!-- <div class="col">
+          <div class="card">
+            <div class="card-header text-center font-weight-bold text-uppercase h4 mb-0">Critters</div>
+            <div class="card-body text-center">
+              <div>Search and sort to find prices, availability and other info about Critters.</div>
             </div>
-            <div>
-              <span>{{ value.price | currency:'':0 }}</span>
-            </div>
-          </div>
-          <div class="collapse" id="{{ value['file-name'] }}">
-            <div class="mt-3 mb-4 border-left border-primary ml-3 pl-3">
-              <div class="">
-                <div class="h3 text-capitalize">{{ value.displayname }}</div>
-                <div ng-if="value.price">Price: {{ value.price | currency:'':0 }} <small>bells</small></div>
-                <div ng-if="value.shadow">Shadow: {{ value.shadow }}</div>
-                <div ng-if="value.speed">Speed: {{ value.speed }}</div>
-              </div>
-              <div class="pt-4 small">
-                <div class="h5">Availability</div>
-                <div ng-if="value.price">Rarity: {{ value.availability.rarity }}</div>
-                <div ng-if="value.price">Location: {{ value.availability.location }}</div>
-                <div ng-if="value.price">Months: <span class="badge badge-success" ng-repeat="month in value.availability['month-array-northern']">{{ month }}</span></div>
-              </div>
-              <div class="pt-4 small">
-                <div class="h5">Catch Phrase</div>
-                <div class="">{{ value['catch-phrase'] }}</div>
-              </div>
-              <div class="pt-4 small">
-                <div class="h5">Museum Phrase</div>
-                <div class="">{{ value['museum-phrase'] }}</div>
-              </div>
-              <div class="pt-4 d-flex justify-content-between align-items-start">
-                <img ng-src="{{value.icon_uri}}" class="img-fluid" style="max-width: 100px;" alt="" />
-                <img ng-src="{{value.image_uri}}" class="img-fluid" style="max-width: 200px;" alt="" />
-              </div>
+            <div class="card-footer p-2">
+              <button class="btn btn-primary btn-block">Go to Critters<i class="fas fa-chevron-right ml-2"></i></button>
             </div>
           </div>
         </div>
-
-        <table class="table table-hover table-sm">
-          <thead>
-            <tr>
-              <th>
-                <a href="#" ng-click="orderByField='displayname'; reverseSort = !reverseSort" class="text-nowrap">
-                  Critter
-                  <span ng-show="orderByField == 'displayname'">
-                    <span ng-show="!reverseSort"><i class="fas fa-caret-down fa-lg"></i></span>
-                    <span ng-show="reverseSort"><i class="fas fa-caret-up fa-lg"></i></span>
-                  </span>
-                </a>
-              </th>
-              <th>
-                <a href="#" ng-click="orderByField='price'; reverseSort = !reverseSort" class="text-nowrap">
-                  Price
-                  <span ng-show="orderByField == 'price'">
-                    <span ng-show="!reverseSort"><i class="fas fa-caret-up fa-lg"></i></span>
-                    <span ng-show="reverseSort"><i class="fas fa-caret-down fa-lg"></i></span>
-                  </span>
-                </a>
-              </th>
-              <!-- <th></th> -->
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-if="!crittersloaded">
-              <td colspan="4" class="p-4 text-center font-weight-light"><i class="fas fa-spinner fa-pulse"></i> Getting Critter data...</td>
-            </tr>
-            <tr ng-class="{'bg-secondary' : value.highlight, 'font-weight-bold' : value.highlight}" ng-if="crittersloaded" ng-repeat="(key, value) in critters | toArray | orderBy:orderByField:reverseSort | search:lookuptype:searchtext | filter:{ type: crittertype }">
-              <td class="align-middle text-capitalize">
-                <img ng-src="{{value.icon_uri}}" class="img-fluid" style="height: 40px;" alt="" />
-                <span class="ml-2">{{ value.displayname }}</span>
-              </td>
-              <td class="align-middle">{{ value.price | currency:'':0 }}</td>
-              <!-- <td class="align-middle">
-                <button class="btn btn-link" data-toggle="modal" data-target="#modalDetails" data-file-name="{{value['file-name']}}"><i class="fas fa-chevron-right"></i></button>
-              </td> -->
-            </tr>
-          </tbody>
-        </table>
+        <div class="col">
+          <div class="card">
+            <div class="card-header text-center font-weight-bold text-uppercase h4 mb-0">Villagers</div>
+            <div class="card-body text-center">
+              <div>Search and sort to find Genders, Hobbies, Personalities, Species and other info about Villagers.</div>
+            </div>
+            <div class="card-footer p-2">
+              <button class="btn btn-primary btn-block">Go to Villagers<i class="fas fa-chevron-right ml-2"></i></button>
+            </div>
+          </div>
+        </div> -->
       </div>
     </div>
   </body>
