Updated some styles and layout

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <div class="container pt-5">
       <div class="py-4">
         <div class="h1 text-center">Welcome!</div>
-        <!-- <div class="text-center">I hope you find these tools useful. More will be added soon, so please check back often.</div> -->
+        <div class="pb-5 text-center">Please understand that this site is privately operated and might be a bit slow at times. Your patience is appreciated!</div>
+        <div class="h4 mb-0 text-center">Take me to...</div>
       </div>
 
       <div class="row">
@@ -31,29 +32,9 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-3">
           <a href="./villagers.html" class="btn btn-primary btn-block btn-lg">Villagers</a>
         </div>
-        <!-- <div class="col">
-          <div class="card">
-            <div class="card-header text-center font-weight-bold text-uppercase h4 mb-0">Critters</div>
-            <div class="card-body text-center">
-              <div>Search and sort to find prices, availability and other info about Critters.</div>
-            </div>
-            <div class="card-footer p-2">
-              <button class="btn btn-primary btn-block">Go to Critters<i class="fas fa-chevron-right ml-2"></i></button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <div class="card-header text-center font-weight-bold text-uppercase h4 mb-0">Villagers</div>
-            <div class="card-body text-center">
-              <div>Search and sort to find Genders, Hobbies, Personalities, Species and other info about Villagers.</div>
-            </div>
-            <div class="card-footer p-2">
-              <button class="btn btn-primary btn-block">Go to Villagers<i class="fas fa-chevron-right ml-2"></i></button>
-            </div>
-          </div>
-        </div> -->
       </div>
+      <hr />
+      <div class="text-center small">This is a privately operated site and is not affiliated with Animal Crossing, Nintendo or any other entity.</div>
     </div>
   </body>
 </html>
