--- a/banner.html
+++ b/banner.html
@@ -1,8 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+<nav class="navbar py-2 pl-3 pr-1 navbar-expand-lg navbar-dark bg-primary fixed-top">
   <a class="navbar-brand" href="./index.html">
-    <img src="./img/nookleafwhite.svg" alt="" style="height: 20px;" />
-    <span class="font-weight-bold px-1">AC:NH</span>
-    <span class="">TOOLS</span>
+    <div class="d-flex justify-content-start align-items-center">
+      <img src="./img/nookleafwhite.svg" alt="" style="height: 16px;" />
+      <div class="font-weight-bold px-1">AC:NH</div>
+      <div class="">Handy Stuff</div>
+    </div>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -11,18 +13,18 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="./critters.html">Critters</a>
+        <a class="nav-link h5 mb-0" href="./critters.html">Critters</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./villagers.html">Villagers</a>
+        <a class="nav-link h5 mb-0" href="./villagers.html">Villagers</a>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item h5 mb-0 dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           External Tools
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="https://ac-turnip.com" target="_blank">Turnip Price Estimator</a>
-          <a class="dropdown-item" href="https://acpatterns.com/editor" target="_blank">Pattern Maker</a>
+          <a class="dropdown-item h5 mb-0 py-2" href="https://ac-turnip.com" target="_blank">Turnip Price Estimator</a>
+          <a class="dropdown-item h5 mb-0 py-2" href="https://acpatterns.com/editor" target="_blank">Pattern Maker</a>
         </div>
       </li>
     </ul>
