--- a/critters.html
+++ b/critters.html
@@ -113,7 +113,7 @@
           </thead>
           <tbody>
             <tr ng-if="!crittersloaded">
-              <td colspan="4" class="p-4 text-center font-weight-light"><i class="fas fa-spinner fa-pulse"></i> Getting Critter data...</td>
+              <td colspan="4" class="py-4 h5 mb-0 font-weight-light"><i class="fas fa-spinner fa-pulse"></i> Getting Critter data...</td>
             </tr>
             <tr
               ng-class="{'bg-secondary' : value.highlight, 'font-weight-bold' : value.highlight}"
@@ -158,16 +158,12 @@
                   </div>
                 </div>
               </td>
-              <!-- <td class="align-middle text-nowrap">
-                <div ng-if="value.availability.rarity">{{ value.availability.rarity }}</div>
-                <div ng-if="!value.availability.rarity" class="text-muted small">n/a</div>
-              </td> -->
             </tr>
-            <tr ng-if="results.length > 0">
-              <td colspan="6" class="text-center">{{ results.length }} Critter<span ng-if="results.length>1">s</span> found</td>
+            <tr ng-if="results.length > 0 && crittersloaded">
+              <td colspan="6" class="py-3">{{ results.length }} Critter<span ng-if="results.length>1">s</span> found</td>
             </tr>
-            <tr ng-if="results.length == 0">
-              <td colspan="6" class="text-center p-3">
+            <tr ng-if="results.length == 0 && crittersloaded">
+              <td colspan="6" class="py-3">
                 <div class="text-danger h5 font-weight-bold"><i class="far fa-frown mr-1"></i> No Critters found</div>
                 <div>There aren't any Critters that match your filters &amp; search.</div>
               </td>
