--- a/villagers.html
+++ b/villagers.html
@@ -105,7 +105,7 @@
           </thead>
           <tbody>
             <tr ng-if="!villagersloaded">
-              <td colspan="4" class="p-4 text-center font-weight-light"><i class="fas fa-spinner fa-pulse"></i> Getting Villager data...</td>
+              <td colspan="5" class="py-4 h5 mb-0 font-weight-light"><i class="fas fa-spinner fa-pulse"></i> Getting Villager data...</td>
             </tr>
             <tr ng-if="villagersloaded" ng-repeat="(key, value) in results = (villagers | toArray | search:'':villagername | orderBy:orderByField:reverseSort | trait:'gender':villagergender | trait:'hobby':villagerhobby | trait:'personality':villagerpersonality | trait:'species':villagerspecies)">
               <td class="align-middle text-nowrap">
@@ -117,11 +117,11 @@
               <td class="align-middle text-nowrap">{{ value.personality }}</td>
               <td class="align-middle text-nowrap">{{ value.species }}</td>
             </tr>
-            <tr ng-if="results.length > 0">
-              <td colspan="6" class="text-center">{{ results.length }} Villager<span ng-if="results.length>1">s</span> found</td>
+            <tr ng-if="results.length > 0 && villagersloaded">
+              <td colspan="6" class="py-3">{{ results.length }} Villager<span ng-if="results.length>1">s</span> found</td>
             </tr>
-            <tr ng-if="results.length == 0">
-              <td colspan="6" class="text-center p-3">
+            <tr ng-if="results.length == 0 && villagersloaded">
+              <td colspan="6" class="py-3">
                 <div class="text-danger h5 font-weight-bold"><i class="far fa-frown mr-1"></i> No Villagers found</div>
                 <div>There aren't any Villagers that match your filters &amp; search.</div>
               </td>
