--- a/banner.html
+++ b/banner.html
@@ -13,13 +13,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link h5 mb-0" href="./critters.html">Critters</a>
+        <a class="nav-link h5 mb-0 py-3 py-lg-2" href="./critters.html">Critters</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link h5 mb-0" href="./villagers.html">Villagers</a>
+        <a class="nav-link h5 mb-0 py-3 py-lg-2" href="./villagers.html">Villagers</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link h5 mb-0 py-3 py-lg-2" href="./fossils.html">Fossils</a>
       </li>
       <li class="nav-item h5 mb-0 dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link py-3 py-lg-2 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           External Tools
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
