--- a/critters.html
+++ b/critters.html
@@ -16,14 +16,14 @@
     <script src="./js/app.js"></script>
     <script></script>
   </head>
-  <body ng-cloak ng-init="initDetails()">
+  <body ng-cloak ng-init="initCritters()">
     <div ng-include="'./modal-lookup-help.html'"></div>
 
     <div ng-include="'./banner.html'"></div>
 
     <div class="container pt-5">
       <div class="h1 py-4 text-center">Critters</div>
-      <div class="row">
+      <div class="row pb-3">
         <div class="col-12 col-sm-6 col-lg-3 mb-4">
           <div class="font-weight-bold">Critter Type</div>
           <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
