--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
       </div>
 
       <div class="row">
-        <div class="col-12 col-sm-6 col-md-4 offset-md-2 col-lg-3 offset-lg-3 col-xl-2 offset-xl-4 mb-3">
+        <div class="col-12 col-sm-4 col-xl-2 offset-xl-3 mb-3">
           <a href="./critters.html" class="btn btn-primary btn-block btn-lg">Critters</a>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-3">
+        <div class="col-12 col-sm-4 col-xl-2 mb-3">
           <a href="./villagers.html" class="btn btn-primary btn-block btn-lg">Villagers</a>
+        </div>
+        <div class="col-12 col-sm-4 col-xl-2 mb-3">
+          <a href="./fossils.html" class="btn btn-primary btn-block btn-lg">Fossils</a>
         </div>
       </div>
       <hr />
